--- a/src/scss/components/_fotter.scss
+++ b/src/scss/components/_fotter.scss
@@ -33,6 +33,7 @@
 		    padding: 1em 1.5em;
 		    color: var(--colorFour);
 		    margin-bottom: 1rem;
+		    max-width: 100%;
 		    @media screen and (min-width: 31.2rem){
 		    	margin-bottom: 0rem;
 		    	margin-right: 1rem;
