--- a/src/views/blocks/shopper.pug
+++ b/src/views/blocks/shopper.pug
@@ -1,9 +1,10 @@
-block shooper
-	.shopper-content
-		img.shopper-img(src="./svg/adidas.svg")
-		img.shopper-img(src="./svg/asos.svg")
-		img.shopper-img(src="./svg/bershka.svg")
-		img.shopper-img(src="./svg/mango.svg")
-		img.shopper-img(src="./svg/reebok.svg")
-		img.shopper-img(src="./svg/stradivarius.svg")
-		img.shopper-img(src="./svg/zara.svg")
+mixin shopper
+	.shopper-container
+		.shopper-content
+			img.shopper-img(src="./svg/adidas.svg")
+			img.shopper-img(src="./svg/asos.svg")
+			img.shopper-img(src="./svg/bershka.svg")
+			img.shopper-img(src="./svg/mango.svg")
+			img.shopper-img(src="./svg/reebok.svg")
+			img.shopper-img(src="./svg/stradivarius.svg")
+			img.shopper-img(src="./svg/zara.svg")
