--- a/src/views/components/commentBuyersItem.pug
+++ b/src/views/components/commentBuyersItem.pug
@@ -1,4 +1,4 @@
-mixin commentBuyers(img, titleSmall, title, description, userPublish)
+mixin commentBuyersItem(img, titleSmall, title, description, userPublish)
 	.commentBuyers-item
 		.commentBuyers-item__topProduct
 			img.commentBuyers-item__topProduct-img(src=img)
