--- a/src/views/components/topClothesItem.pug
+++ b/src/views/components/topClothesItem.pug
@@ -1,4 +1,4 @@
-mixin topClothes(img, titleType, title, price)
+mixin topClothesItem(img, titleType, title, price)
 	.topClothes-card
 		.topClothes-card__img(style=`background-image: url(${img});`)
 		p.topClothes-card__titleType= titleType
