--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,12 +2,17 @@
 	&-content{
 		display: flex;
 		flex-direction: column;
-		width: 80%;
     margin: 2em auto;
 		@media screen and (min-width: 64em){
 			flex-direction: row;
 			justify-content: space-between;
 		}
+		@media screen and (min-width: 1200px){
+	    max-width: 1280px;
+	  }
+	  @media screen and (max-width: 1999px){
+	    max-width: 80vw;
+	  }
 	}
 	&-logo{
 		@media screen and (min-width: 64em){
@@ -23,6 +28,9 @@
 				@media screen and (min-width: 64em){
 					display: none;
 				}
+			}
+			& i {
+				color: #212121;
 			}
 		}
 		& p {
@@ -43,12 +51,13 @@
 	    bottom: 0;
 	    left: 0;
 	    width: 100%;
-	    transition: transform 1s ease-out;
-	    background-color: var(--colorFive);
+	    transition: transform .3s ease-out;
+	    background-color: var(--colorThree);
 	    display: flex;
 	    justify-content: center;
 	    flex-direction: column;
 	    padding: 0 2em;
+	    z-index: 5;
 		}
 	}
 	&-nav{
@@ -78,6 +87,10 @@
 			    @media screen and (max-width: 64em){
 			    	color: var(--colorTwo);
 			    }
+			    &:hover {
+				    color: var(--colorFive);
+				    transition: .2s all ease-in-out;
+					}
 				}
 			}
 		}
