--- a/src/scss/components/_navTop.scss
+++ b/src/scss/components/_navTop.scss
@@ -2,11 +2,16 @@
 	&-content{
 		display: grid;
 		grid-template-columns: 100%;
-		width: 80%;
 	  margin: auto;
 		@media screen and (min-width: 64em){
 	    grid-template-columns: 210px 5fr;
 		}
+		@media screen and (min-width: 1200px){
+	    max-width: 1280px;
+	  }
+	  @media screen and (max-width: 1999px){
+	    max-width: 80vw;
+	  }
 		&__right{
 			display: grid;
 			grid-template-columns: 100%;
