--- a/src/scss/config/_mixins.scss
+++ b/src/scss/config/_mixins.scss
@@ -20,7 +20,7 @@
   color: $color;
   font-size: $size;
   font-weight: bold;
-  margin-left: 15px;
+  margin-left: 10px;
 }
 
 @mixin button ($type){
@@ -28,18 +28,21 @@
     background-color: #FFF;
     color: $colorOne;
     &:after{
+      transition: margin-left .15s ease-in-out;
       @include iconFontAwesome("\f061", $colorOne, 1em);
     }
   } @else if $type == secondary{
     background-color: transparent;
     color: $colorTwo;
     &:after{
+      transition: margin-left .15s ease-in-out;
       @include iconFontAwesome("\f061", #f5f5f5, 1em);
     }
   } @else if $type == tertiary{
     background-color: $colorOne;
     color: #fff;
     &:after{
+      transition: margin-left .15s ease-in-out;
       @include iconFontAwesome("\f061", #FFF, 1em);
     }
   } @else if $type == cuartery{
@@ -50,4 +53,7 @@
   @include font(smaller);
   font-weight: 600;
   letter-spacing: 1px;
+  &:hover:after {
+    margin-left: 20px;
+  }
 }
