--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -1,23 +1,55 @@
 extends ../templates/template
-block navTop
-	include ../blocks/navTop.pug
-block header
-	include ../blocks/header.pug
-block noticeWeek
-	include ../blocks/noticeWeek.pug
-block articlesShop
-	include ../blocks/articlesShop.pug
-block charactericsShop
-	include ../blocks/charactericsShop.pug
-block collectionGarment
-	include ../blocks/collectionGarment.pug
-block topClothes
-	include ../blocks/topClothes.pug
-block discountSummer
-	include ../blocks/discountSummer.pug
-block commentBuyers
-	include ../blocks/commentBuyers.pug
-block shopper
-	include ../blocks/shopper.pug
-block footer
-	include ../blocks/fotter.pug
+include ../blocks/noticeWeek.pug
+include ../blocks/articlesShop.pug
+include ../blocks/charactericsShop.pug
+include ../blocks/collectionGarment.pug
+include ../blocks/commentBuyers.pug
+include ../blocks/discountSummer.pug
+include ../blocks/shopper.pug
+include ../blocks/topClothes.pug
+block content
+	+noticeWeek
+	+articlesShop
+	+charactericsShop
+	+collectionGarment
+	+topClothes
+	+discountSummer
+	+commentBuyers
+	+shopper
+	script.
+		window.addEventListener('load',function(){
+		  document.querySelector('.glider').addEventListener('glider-slide-visible', function(event){
+		    var glider = Glider(this);
+		  });
+		  window._ = new Glider(document.querySelector('.glider'), {
+		      slidesToShow: 1,
+		      slidesToScroll: 1,
+		      itemWidth: 150,
+		      draggable: true,
+		      scrollLock: false,
+		      dots: false,
+		      rewind: true,
+		      arrows: {
+		          prev: '.glider-prev',
+		          next: '.glider-next'
+		      },
+		      responsive: [
+		      	{
+		      		breakpoint: 800,
+		      		settings: {
+		      			slidesToShow: 2,
+		      			slidesToScroll: 1,
+		      			dots: false,
+		      		}
+		      	},
+		      	{
+		      		breakpoint: 1100,
+		      		settings: {
+		      			slidesToShow: 3,
+		      			slidesToScroll: 1,
+		      			dots: '#dots',
+		      		}
+		      	}
+		      ]
+		  });
+		});
