--- a/src/scss/components/_navTop.scss
+++ b/src/scss/components/_navTop.scss
@@ -63,8 +63,9 @@
 			width: 100%;
 			@media screen and (min-width: 64em){
 				display: flex;
-				justify-content: start;
-				align-items: center;
+		    justify-content: start;
+		    align-items: center;
+		    flex: 1 0 42%;
 			}
 			&-languageAndValue{
 				&_btn{
@@ -113,9 +114,12 @@
 			}
 			&-contact{
 				display: flex;
-    		justify-content: end;
+		    justify-content: end;
+		    flex: 1 0 20%;
+		    align-items: center;
     		@media screen and (max-width: 64em){
     			flex-direction: column;
+    			align-items: start;
     		}
     		&_contactText {
     			//margin-bottom: .8em;
