--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -36,6 +36,7 @@
 
 // Pages
 @import 'pages/catalog';
+@import 'pages/catalog-product';
 @import 'pages/about';
 @import 'pages/shop';
 @import 'pages/contact';
