--- a/src/views/blocks/header.pug
+++ b/src/views/blocks/header.pug
@@ -2,7 +2,7 @@ mixin header
 	.header-container
 		header.header-content
 			.header-logo
-				p Shooper.
+				p(onclick="window.location='/'") Shooper.
 				#navToggleHeader.header-logo__logo-right
 					a#navToggleHeaderBtn.header-logo__logo(href="#headerNavContent")
 						i.fas.fa-bars
