--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -36,6 +36,7 @@
 		& p {
 			font-size: 2em;
 	    font-family: 'Segoe UI Bold';
+	    cursor: pointer;
 	    @include var(color, colorOne);
 		}
 	}
