--- a/src/views/pages/dashboard.pug
+++ b/src/views/pages/dashboard.pug
@@ -1,4 +1,5 @@
 include ../components/metatags
+-var itemsMenu = [{nameIcon: "fas fa-tachometer-alt", titleItem: "Form Elements"}, {nameIcon: "fas fa-folder", titleItem: "Form Elements"}, {nameIcon: "fas fa-ambulance", titleItem: "Form Elements"}, {nameIcon: "fas fa-anchor", titleItem: "Form Elements"}, {nameIcon: "fas fa-coffee", titleItem: "Form Elements"}, {nameIcon: "fas fa-balance-scale", titleItem: "Form Elements"}, {nameIcon: "fas fa-baby-carriage", titleItem: "Form Elements"}, {nameIcon: "fas fa-beer", titleItem: "Form Elements"}]
 doctype html
 html(lang="es")
 	head
@@ -14,17 +15,34 @@ html(lang="es")
 			.dashboard-content_header
 				h1.dashboard-content_header-title Dashboard
 				a#outLoginDashboard.dashboard-content_header-link(href="#") Salir
+			header.dashboard-content_head
+				div.dashboard-content_head-navigation
+					ul.dashboard-content_head-navigation_ul
+						each items in itemsMenu
+							li.dashboard-content_head-navigation_ul-li
+								a.dashboard-content_head-navigation_ul-li_a(href="#")=items.titleItem
+									i.dashboard-content_head-navigation_ul-li_a-i(class=`${items.nameIcon}`)
+			div.dashboard-content_container
+				p.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	script(src="./script.js")
-	//script.
-		const linkOutLogin = document.getElementById("outLoginDashboard")
-		let user = localStorage.getItem("userSession")
-		if(user){
-			window.location.href
-		}else{
-			window.location.href = "login.html"
-		}
-		linkOutLogin.addEventListener("click", function(e){
-			e.preventDefault()
-			localStorage.removeItem("userSession")
-			window.location.href = "login.html"
-		})
